# Beginner-RLE-Encoder

./: Buffer.cpp  Buffer.h  Buffer.inl  CMakeLists.txt  FileHandler.cpp  FileHandler.h  FileIO.cpp  FileIO.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  Operations.cpp  Operations.h  RLE.cpp  RLE.h  RLEDecoder.cpp  RLEDecoder.h  RLEEncoder.cpp  RLEEncoder.h  RLEHandler.cpp  RLEHandler.h  RLEPair.cpp  RLEPair.h  Utils.cpp  Utils.h  main.cpp  test.cpp
